# Spectrum

./: CMakeList.txt  CMakeLists.txt  LinearCapsule.cpp  LinearCapsule.h  Linear_subspace_spectrum.cpp  README.md  README.txt  WriteReadFiles.cpp  WriteReadFiles.h  files-comparison.cpp  files-comparison.h  linear-capsule.cpp  linear-capsule.h  linear-subspace-spectrum.cpp  write-read-files.cpp  write-read-files.h
in/: tst_20_32.txt  tst_20_8192.txt  tst_24_32.txt  tst_24_8.txt  tst_25_8.txt  tst_30_8.txt  tst_31_32.txt  tst_32_256.txt  tst_32_32.txt  tst_32_64.txt  tst_33_64.txt
